--- a/src/main/resources/com/dictiofx/code/hello-view.fxml
+++ b/src/main/resources/com/dictiofx/code/hello-view.fxml
@@ -11,45 +11,30 @@
 <?import javafx.scene.text.Font?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dictiofx.code.HelloController">
-   <children>
-      <VBox>
-         <children>
-            <Pane prefHeight="159.0" prefWidth="900.0" style="-fx-background-color: #AAABBB;">
-               <children>
-                  <Label layoutX="393.0" layoutY="9.0" style="-fx-text-fill: WHITE;" text="DICTIO">
-                     <font>
-                        <Font name="System Bold" size="34.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
-            <Pane prefHeight="152.0" prefWidth="900.0" style="-fx-background-color: #1E3E62;">
-               <children>
-                  <Button fx:id="loadButton" layoutX="349.0" layoutY="13.0" mnemonicParsing="false" onAction="#charger" prefHeight="30.0" prefWidth="88.0" text="Charger" />
-                  <Button layoutX="465.0" layoutY="13.0" mnemonicParsing="false" onAction="#sauvegarder" prefHeight="30.0" prefWidth="102.0" text="Sauvegarder" />
-               </children>
-            </Pane>
-         </children>
+   <VBox>
+      <Pane prefHeight="159.0" prefWidth="900.0" style="-fx-background-color: #AAABBB;">
+         <Label layoutX="393.0" layoutY="9.0" style="-fx-text-fill: WHITE;" text="DICTIO">
+            <font>
+               <Font name="System Bold" size="34.0" />
+            </font>
+         </Label>
+      </Pane>
+      <Pane prefHeight="152.0" prefWidth="900.0" style="-fx-background-color: #1E3E62;">
+         <Button layoutX="349.0" layoutY="13.0" mnemonicParsing="false" onAction="#charger" prefHeight="30.0" prefWidth="88.0" text="Charger" />
+         <Button layoutX="465.0" layoutY="13.0" mnemonicParsing="false" onAction="#sauvegarder" prefHeight="30.0" prefWidth="102.0" text="Sauvegarder" />
+      </Pane>
+   </VBox>
+   <HBox prefHeight="399.0" prefWidth="900.0">
+      <VBox prefHeight="257.0" prefWidth="280.0">
+         <TextField fx:id="search" onInputMethodTextChanged="#chercher" prefHeight="59.0" prefWidth="277.0" style="-fx-border-width: 5px; -fx-border-color: #AAABBB;" />
+         <ScrollPane style="-fx-border-color: #AAABBB; -fx-border-width: 5px;">
+            <VBox fx:id="searchList" prefHeight="168.0" prefWidth="277.0" style="-fx-background-color: white;" />
+         </ScrollPane>
       </VBox>
-      <HBox prefHeight="399.0" prefWidth="900.0">
-         <children>
-            <VBox prefHeight="257.0" prefWidth="280.0">
-               <children>
-                  <TextField fx:id="search" onInputMethodTextChanged="#chercher" prefHeight="59.0" prefWidth="277.0" style="-fx-border-width: 5px; -fx-border-color: #AAABBB;" />
-                  <ScrollPane style="-fx-border-color: #AAABBB; -fx-border-width: 5px;">
-                     <content>
-                        <VBox fx:id="searchList" prefHeight="168.0" prefWidth="277.0" style="-fx-background-color: white;" />
-                     </content>
-                  </ScrollPane>
-               </children>
-            </VBox>
-            <TextArea fx:id="wordArea" prefHeight="204.0" prefWidth="528.0" style="-fx-background-color: #AAABBB; -fx-padding: 5px;" />
-            <ScrollPane fx:id="scrollBox" prefHeight="204.0" prefWidth="231.0" style="-fx-border-color: #AAABBB; -fx-border-width: 5px;">
-               <content>
-                  <VBox fx:id="scrollList" prefHeight="135.0" prefWidth="166.0" />
-               </content></ScrollPane>
-         </children>
-      </HBox>
-      <Button fx:id="addButton" mnemonicParsing="false" onAction="#addToList" prefHeight="225.0" prefWidth="900.0" style="-fx-border-radius: 0;" text="Ajouter / Modifier" />
-   </children>
+      <TextArea fx:id="wordArea" prefHeight="204.0" prefWidth="528.0" style="-fx-background-color: #AAABBB; -fx-padding: 5px;" />
+      <ScrollPane prefHeight="204.0" prefWidth="231.0" style="-fx-border-color: #AAABBB; -fx-border-width: 5px;">
+         <VBox fx:id="scrollList" prefHeight="135.0" prefWidth="166.0" />
+      </ScrollPane>
+   </HBox>
+   <Button mnemonicParsing="false" onAction="#addToList" prefHeight="225.0" prefWidth="900.0" style="-fx-border-radius: 0;" text="Ajouter / Modifier" />
 </VBox>
